--- a/client/src/components/atoms/form/FormSection/FormSection.css
+++ b/client/src/components/atoms/form/FormSection/FormSection.css
@@ -1,18 +1,14 @@
 .form-control-group{
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    margin-left: 20px;
+    gap: .5rem;
 }
 
 .form-control-row{
     display: flex;
     align-items: center;
-    gap: 12px;
 }
 
 .form-control-section{
     margin-bottom: 20px;
-    padding: 12px 0;
-    border-bottom: 1px solid #333;
 }
