--- a/client/src/components/atoms/form/FormRow/FormRow.css
+++ b/client/src/components/atoms/form/FormRow/FormRow.css
@@ -11,3 +11,9 @@
     min-width: 40px;
     text-align: right;
 }
+
+.form-control-row-slider-container{
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+}
