--- a/client/src/components/atoms/form/FormSection/FormSection.css
+++ b/client/src/components/atoms/form/FormSection/FormSection.css
@@ -10,6 +10,8 @@
     justify-content: space-between;
 }
 
-.form-control-section{
-    margin-bottom: 20px;
+.form-control-top-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
