--- a/client/src/components/organisms/EditorSidebar/EditorSidebar.css
+++ b/client/src/components/organisms/EditorSidebar/EditorSidebar.css
@@ -81,10 +81,20 @@
   font-size: 1.4rem; margin-top: 5px;
 }
 
+.editor-sidebar-item-body-container{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 /* Contenido (Scene/Modifiers) */
 /* TODO: height dynamic */
 .editor-sidebar-scene-container{ padding: 1.5rem; height: 64vh; overflow: scroll;}
 .editor-sidebar-scene-options-container{ display: flex; flex-direction: column; gap: .5rem; }
+
+.editor-render-options-container{
+  height: 79vh;
+}
 
 .editor-sidebar-user-avatar-wrapper{ padding: 1.5rem; }
 .editor-sidebar-user-avatar-wrapper .sidebar-user-fullname{ color: #dadada; }
