--- a/client/src/components/organisms/EditorWidget/EditorWidget.css
+++ b/client/src/components/organisms/EditorWidget/EditorWidget.css
@@ -1,8 +1,9 @@
 .editor-floating-container {
     position: absolute;
-    background-color: rgb(30 30 30 / 42%);
+    background-color: rgba(30, 30, 30, 0.3);
     border: 1px solid #212121;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     z-index: 200;
     padding: 1.5rem;
     border-radius: 1rem;
@@ -14,7 +15,7 @@
     gap: 1rem;
     /*cursor: grab;*/
     opacity: 1;
-    transition: opacity 500ms ease; 
+    transition: opacity 500ms ease;
 }
 
 .editor-floating-container.dimmed {
