--- a/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
+++ b/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
@@ -11,7 +11,7 @@
     position: absolute;
     top: 2rem;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, 0) !important;
     display: flex !important;
     gap: 1rem;
     align-items: center;
