--- a/client/src/components/organisms/TimestepControls/TimestepControls.css
+++ b/client/src/components/organisms/TimestepControls/TimestepControls.css
@@ -3,7 +3,7 @@
     bottom: 2rem;
     left: 50%;
     width: auto;
-    transform: translateX(-50%);
+    transform: translateX(-50%) !important;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
