--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -130,8 +130,7 @@
 .editor-container {
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: space-between;
+    position: relative;
     user-select: none;
 }
 
