--- a/client/src/components/organisms/DocumentListing/DocumentListing.css
+++ b/client/src/components/organisms/DocumentListing/DocumentListing.css
@@ -102,12 +102,12 @@
     display: flex;
     justify-content: space-between;
     gap: 1rem;
-    border-bottom: 1px solid var(--color-border);
+    /*border-bottom: 1px solid var(--color-border);*/
     padding: 2rem 0 1rem;
     position: sticky;
     top: 0;
     z-index: 200000;
-    background: var(--color-bg);
+    /*background: var(--color-bg);*/
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
 }
