--- a/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
+++ b/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
@@ -1,15 +1,32 @@
 .frame-atoms-table-container{
-  width: 520px;
+  width: 1000px;
   max-height: 70vh;
   border-radius: .5rem;
   background-color: var(--color-bg);
   box-shadow: 0 12px 30px rgba(0,0,0,.25);
-  width: 1000px;
+  transition: width 0.3s ease, height 0.3s ease;
 }
 
 .frame-atoms-table-draggable{
-  position: absolute;
+  position: fixed !important;
   z-index: 9999999999;
+  top: 10%;
+  left: calc(50% - 500px);
+}
+
+.frame-atoms-table-draggable:has(.maximized){
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  transform: none !important;
+}
+
+.frame-atoms-table-container.maximized{
+  width: 100% !important;
+  height: 100% !important;
+  max-height: 100% !important;
+  border-radius: 0;
 }
 
 .frame-atoms-table-header-container{
@@ -17,23 +34,27 @@
   gap: 1.5rem;
   flex-direction: column;
   padding: 1rem;
-  cursor: grab;
   user-select: none;
-}
-
-.frame-atoms-table-header-container:active{
-  cursor: grabbing;
 }
 
 .frame-atoms-table-header-title{
   font-size: 1.7rem;
   font-weight: 300;
+  cursor: grab;
+}
+
+.frame-atoms-table-header-title:active{
+  cursor: grabbing;
 }
 
 .frame-atoms-table-body-container{
   padding: 1rem;
   max-height: 60vh;
   overflow: auto;
+}
+
+.frame-atoms-table-container.maximized .frame-atoms-table-body-container{
+  max-height: calc(100vh - 120px);
 }
 
 .frame-atoms-table-container .document-listing-table-row-container,
