--- a/client/src/components/organisms/Scene3D/Scene3D.css
+++ b/client/src/components/organisms/Scene3D/Scene3D.css
@@ -6,3 +6,10 @@
     height: 100%;
     width: 100%;
 }
+
+/* Ensure Canvas from react-three-fiber occupies 100% of parent */
+canvas {
+    width: 100% !important;
+    height: 100% !important;
+    display: block;
+}
