feat: add zoom functionality to SceneTopCenteredOptions and integrate with CanvasWidgets

--- a/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
+++ b/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
@@ -20,6 +20,13 @@
     margin: 0 auto;
     width: auto;
     padding: .5rem;
+    z-index: 100;
+}
+
+.editor-scene-zoom-selector-wrapper {
+    width: 120px;
+    position: relative;
+    z-index: 100;
 }
 
 @media screen and (max-width: 768px){
@@ -39,5 +46,9 @@
         width: fit-content;
         left: 50%;
         transform: translateX(-50%) !important;
+    }
+
+    .editor-scene-zoom-selector-wrapper {
+        width: 100px;
     }
 }
